@@ -38,12 +38,13 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang.math.RandomUtils;
 import org.apache.commons.lang3.time.DateUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.slf4j.event.Level;
 import org.sonar.api.issue.Issue;
-import org.sonar.api.resources.Qualifiers;
+import org.sonar.db.component.ComponentQualifiers;
 import org.sonar.api.testfixtures.log.LogAndArguments;
 import org.sonar.api.testfixtures.log.LogTesterJUnit5;
 import org.sonar.api.utils.System2;
@@ -77,8 +78,8 @@ import org.sonar.db.event.EventTesting;
 import org.sonar.db.issue.AnticipatedTransitionDto;
 import org.sonar.db.issue.IssueChangeDto;
 import org.sonar.db.issue.IssueDto;
-import org.sonar.db.measure.LiveMeasureDto;
 import org.sonar.db.measure.MeasureDto;
+import org.sonar.db.measure.ProjectMeasureDto;
 import org.sonar.db.metric.MetricDto;
 import org.sonar.db.newcodeperiod.NewCodePeriodDto;
 import org.sonar.db.newcodeperiod.NewCodePeriodType;
@@ -98,7 +99,7 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.time.ZoneOffset.UTC;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
-import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
+import static org.apache.commons.lang3.RandomStringUtils.secure;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.groups.Tuple.tuple;
 import static org.mockito.Mockito.mock;
@@ -322,21 +323,21 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
 
     MetricDto metric1 = db.measures().insertMetric();
     MetricDto metric2 = db.measures().insertMetric();
-    LiveMeasureDto liveMeasureMetric1OnFile = db.measures().insertLiveMeasure(srcFile, metric1);
-    LiveMeasureDto liveMeasureMetric2OnFile = db.measures().insertLiveMeasure(srcFile, metric2);
-    LiveMeasureDto liveMeasureMetric1OnDir = db.measures().insertLiveMeasure(dir, metric1);
-    LiveMeasureDto liveMeasureMetric2OnDir = db.measures().insertLiveMeasure(dir, metric2);
-    LiveMeasureDto liveMeasureMetric1OnProject = db.measures().insertLiveMeasure(mainBranch, metric1);
-    LiveMeasureDto liveMeasureMetric2OnProject = db.measures().insertLiveMeasure(mainBranch, metric2);
-    LiveMeasureDto liveMeasureMetric1OnNonSelected = db.measures().insertLiveMeasure(enabledFile, metric1);
-    LiveMeasureDto liveMeasureMetric2OnNonSelected = db.measures().insertLiveMeasure(enabledFile, metric2);
-    assertThat(db.countRowsOfTable("live_measures")).isEqualTo(8);
-    PurgeListener purgeListener = mock(PurgeListener.class);
+
+    db.measures().insertMeasure(srcFile,
+      m -> m.addValue(metric1.getKey(), RandomUtils.nextInt(50)).addValue(metric2.getKey(), RandomUtils.nextInt(50)));
+    db.measures().insertMeasure(dir,
+      m -> m.addValue(metric1.getKey(), RandomUtils.nextInt(50)).addValue(metric2.getKey(), RandomUtils.nextInt(50)));
+    db.measures().insertMeasure(mainBranch,
+      m -> m.addValue(metric1.getKey(), RandomUtils.nextInt(50)).addValue(metric2.getKey(), RandomUtils.nextInt(50)));
+    db.measures().insertMeasure(enabledFile,
+      m -> m.addValue(metric1.getKey(), RandomUtils.nextInt(50)).addValue(metric2.getKey(), RandomUtils.nextInt(50)));
+    assertThat(db.countRowsOfTable("measures")).isEqualTo(4);
 
     // back to present
-    Set<String> selectedComponentUuids = ImmutableSet.of(srcFile.uuid(), testFile.uuid());
+    Set<String> selectedComponentUuids = Set.of(srcFile.uuid(), testFile.uuid());
     underTest.purge(dbSession, newConfigurationWith30Days(system2, mainBranch.uuid(), projectData.projectUuid(), selectedComponentUuids),
-      purgeListener, new PurgeProfiler());
+      mock(PurgeListener.class), new PurgeProfiler());
     dbSession.commit();
 
     // set purged=true for non-last snapshot
@@ -359,17 +360,17 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
     assertThat(db.countRowsOfTable("file_sources")).isOne();
     assertThat(db.getDbClient().fileSourceDao().selectByFileUuid(dbSession, nonSelectedFileSource.getFileUuid())).isNotNull();
 
-    // deletes live measure of selected
-    assertThat(db.countRowsOfTable("live_measures")).isEqualTo(4);
-    List<LiveMeasureDto> liveMeasureDtos = db.getDbClient().liveMeasureDao()
-      .selectByComponentUuidsAndMetricUuids(dbSession, ImmutableSet.of(srcFile.uuid(), dir.uuid(), mainBranch.uuid(), enabledFile.uuid()),
-        ImmutableSet.of(metric1.getUuid(), metric2.getUuid()));
-    assertThat(liveMeasureDtos)
-      .extracting(LiveMeasureDto::getComponentUuid)
+    // delete measures of selected
+    assertThat(db.countRowsOfTable("measures")).isEqualTo(2);
+    List<MeasureDto> measureDtos = Set.of(srcFile.uuid(), dir.uuid(), mainBranch.uuid(), enabledFile.uuid()).stream()
+      .map(component -> db.getDbClient().measureDao().selectByComponentUuid(dbSession, component))
+      .filter(Optional::isPresent).map(Optional::get).toList();
+    assertThat(measureDtos)
+      .extracting(MeasureDto::getComponentUuid)
       .containsOnly(enabledFile.uuid(), mainBranch.uuid());
-    assertThat(liveMeasureDtos)
-      .extracting(LiveMeasureDto::getMetricUuid)
-      .containsOnly(metric1.getUuid(), metric2.getUuid());
+    assertThat(measureDtos)
+      .allSatisfy(dto -> assertThat(dto.getMetricValues())
+        .containsOnlyKeys(metric1.getKey(), metric2.getKey()));
   }
 
   @Test
@@ -395,7 +396,7 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
     ComponentDto project = db.components().insertPrivateProject().getMainBranchComponent();
 
     logTester.setLevel(Level.DEBUG);
-    underTest.deleteProject(db.getSession(), project.uuid(), Qualifiers.PROJECT, project.name(), project.getKey());
+    underTest.deleteProject(db.getSession(), project.uuid(), ComponentQualifiers.PROJECT, project.name(), project.getKey());
 
     assertThat(logTester.getLogs(LoggerLevel.DEBUG).stream()
       .map(LogAndArguments::getFormattedMsg)
@@ -408,7 +409,7 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
     ComponentDto project = db.components().insertPrivateProject().getMainBranchComponent();
 
     logTester.setLevel(Level.INFO);
-    underTest.deleteProject(db.getSession(), project.uuid(), Qualifiers.PROJECT, project.name(), project.getKey());
+    underTest.deleteProject(db.getSession(), project.uuid(), ComponentQualifiers.PROJECT, project.name(), project.getKey());
 
     assertThat(logTester.getLogs(LoggerLevel.DEBUG).stream()
       .map(LogAndArguments::getFormattedMsg)
@@ -668,7 +669,7 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
     MetricDto metric = db.measures().insertMetric();
     ProjectData project = db.components().insertPrivateProject();
     BranchDto mainBranch = db.getDbClient().branchDao().selectByUuid(db.getSession(), project.getMainBranchDto().getUuid()).get();
-    RuleDto rule = db.rules().insert();
+    db.rules().insert();
 
     ProjectData app = db.components().insertPrivateApplication();
     BranchDto appBranch = db.components().insertProjectBranch(app.getProjectDto());
@@ -680,12 +681,12 @@ project.getProjectDto().getUuid()), PurgeListener.EMPTY, new PurgeProfiler());
     SnapshotDto otherAppAnalysis = db.components().insertSnapshot(otherApp.getProjectDto());
     SnapshotDto otherAppBranchAnalysis = db.components().insertSnapshot(otherAppBranch);
 
-    MeasureDto appMeasure = db.measures().insertMeasure(app.getMainBranchComponent(), appAnalysis, metric);
+    db.measures().insertProjectMeasure(app.getMainBranchComponent(), appAnalysis, metric);
     ComponentDto appBranchComponent = db.components().getComponentDto(appBranch);
-    MeasureDto appBranchMeasure = db.measures().insertMeasure(appBranchComponent, appBranchAnalysis, metric);
-    MeasureDto otherAppMeasure = db.measures().insertMeasure(otherApp.getMainBranchComponent(), otherAppAnalysis, metric);
+    db.measures().insertProjectMeasure(appBranchComponent, appBranchAnalysis, metric);
+    ProjectMeasureDto otherAppMeasure = db.measures().insertProjectMeasure(otherApp.getMainBranchComponent(), otherAppAnalysis, metric);
     ComponentDto otherAppBranchComponent = db.components().getComponentDto(otherAppBranch);
-    MeasureDto otherAppBranchMeasure = db.measures().insertMeasure(otherAppBranchComponent, otherAppBranchAnalysis, metric);
+    ProjectMeasureDto otherAppBranchMeasure = db.measures().insertProjectMeasure(otherAppBranchComponent, otherAppBranchAnalysis, metric);
 
     db.components().addApplicationProject(app.getProjectDto(), project.getProjectDto());
     db.components().addApplicationProject(otherApp.getProjectDto(), project.getProjectDto());
@@ -714,7 +715,7 @@ mainBranch);
     MetricDto metric = db.measures().insertMetric();
     ProjectData project = db.components().insertPrivateProject();
     BranchDto projectBranch = db.getDbClient().branchDao().selectByUuid(db.getSession(), project.getMainBranchDto().getUuid()).get();
-    RuleDto rule = db.rules().insert();
+    db.rules().insert();
 
     ProjectData app = db.components().insertPrivateApplication();
     BranchDto appBranch = db.components().insertProjectBranch(app.getProjectDto());
@@ -726,12 +727,12 @@ mainBranch);
     SnapshotDto otherAppAnalysis = db.components().insertSnapshot(otherApp.getProjectDto());
     SnapshotDto otherAppBranchAnalysis = db.components().insertSnapshot(otherAppBranch);
 
-    MeasureDto appMeasure = db.measures().insertMeasure(app.getMainBranchComponent(), appAnalysis, metric);
+    ProjectMeasureDto appMeasure = db.measures().insertProjectMeasure(app.getMainBranchComponent(), appAnalysis, metric);
     ComponentDto appBranchComponent = db.components().getComponentDto(appBranch);
-    MeasureDto appBranchMeasure = db.measures().insertMeasure(appBranchComponent, appBranchAnalysis, metric);
-    MeasureDto otherAppMeasure = db.measures().insertMeasure(otherApp.getMainBranchComponent(), otherAppAnalysis, metric);
+    db.measures().insertProjectMeasure(appBranchComponent, appBranchAnalysis, metric);
+    ProjectMeasureDto otherAppMeasure = db.measures().insertProjectMeasure(otherApp.getMainBranchComponent(), otherAppAnalysis, metric);
     ComponentDto otherAppBranchComponent = db.components().getComponentDto(otherAppBranch);
-    MeasureDto otherAppBranchMeasure = db.measures().insertMeasure(otherAppBranchComponent, otherAppBranchAnalysis, metric);
+    ProjectMeasureDto otherAppBranchMeasure = db.measures().insertProjectMeasure(otherAppBranchComponent, otherAppBranchAnalysis, metric);
 
     db.components().addApplicationProject(app.getProjectDto(), project.getProjectDto());
     db.components().addApplicationProject(otherApp.getProjectDto(), project.getProjectDto());
@@ -1610,7 +1611,7 @@ project.getProjectDto().getKey());
     dbClient.scannerAnalysisCacheDao().insert(dbSession, branch.getUuid(), IOUtils.toInputStream("test1", UTF_8));
     dbClient.scannerAnalysisCacheDao().insert(dbSession, project.getUuid(), IOUtils.toInputStream("test2", UTF_8));
 
-    underTest.deleteProject(dbSession, project.getUuid(), Qualifiers.PROJECT, "project", "project");
+    underTest.deleteProject(dbSession, project.getUuid(), ComponentQualifiers.PROJECT, "project", "project");
 
     assertThat(dbClient.scannerAnalysisCacheDao().selectData(dbSession, project.getUuid())).isNull();
     assertThat(dbClient.scannerAnalysisCacheDao().selectData(dbSession, branch.getUuid())).isNull();
@@ -1691,25 +1692,25 @@ project.getProjectDto().getKey());
   }
 
   @Test
-  void delete_live_measures_when_deleting_project() {
+  void delete_measures_when_deleting_project() {
     MetricDto metric = db.measures().insertMetric();
 
     ComponentDto project1 = db.components().insertPublicProject().getMainBranchComponent();
     ComponentDto dir1 = db.components().insertComponent(newDirectory(project1, "path"));
-    db.measures().insertLiveMeasure(project1, metric);
-    db.measures().insertLiveMeasure(dir1, metric);
+    db.measures().insertMeasure(project1, m -> m.addValue(metric.getKey(), RandomUtils.nextInt(50)));
+    db.measures().insertMeasure(dir1, m -> m.addValue(metric.getKey(), RandomUtils.nextInt(50)));
 
     ComponentDto project2 = db.components().insertPublicProject().getMainBranchComponent();
     ComponentDto dir2 = db.components().insertComponent(newDirectory(project2, "path"));
-    db.measures().insertLiveMeasure(project2, metric);
-    db.measures().insertLiveMeasure(dir2, metric);
+    db.measures().insertMeasure(project2, m -> m.addValue(metric.getKey(), RandomUtils.nextInt(50)));
+    db.measures().insertMeasure(dir2, m -> m.addValue(metric.getKey(), RandomUtils.nextInt(50)));
 
     underTest.deleteProject(dbSession, project1.uuid(), project1.qualifier(), project1.name(), project1.getKey());
 
-    assertThat(dbClient.liveMeasureDao().selectByComponentUuidsAndMetricUuids(dbSession, asList(project1.uuid(), dir1.uuid()),
-      asList(metric.getUuid()))).isEmpty();
-    assertThat(dbClient.liveMeasureDao().selectByComponentUuidsAndMetricUuids(dbSession, asList(project2.uuid(), dir2.uuid()),
-      asList(metric.getUuid()))).hasSize(2);
+    assertThat(dbClient.measureDao().selectByComponentUuid(dbSession, project1.uuid())).isEmpty();
+    assertThat(dbClient.measureDao().selectByComponentUuid(dbSession, dir1.uuid())).isEmpty();
+    assertThat(dbClient.measureDao().selectByComponentUuid(dbSession, project2.uuid())).isNotEmpty();
+    assertThat(dbClient.measureDao().selectByComponentUuid(dbSession, dir2.uuid())).isNotEmpty();
   }
 
   private void verifyNoEffect(ComponentDto firstRoot, ComponentDto... otherRoots) {
@@ -1826,15 +1827,15 @@ projects[2].getMainBranchComponent().uuid(),
     ComponentDto subview = db.components().insertComponent(newSubPortfolio(view));
     ComponentDto pc = db.components().insertComponent(newProjectCopy("a", db.components().insertPrivateProject().getMainBranchComponent()
 , view));
-    insertMeasureFor(view, subview, pc);
-    assertThat(getComponentUuidsOfMeasures()).containsOnly(view.uuid(), subview.uuid(), pc.uuid());
+    insertProjectMeasureFor(view, subview, pc);
+    assertThat(getComponentUuidsOfProjectMeasures()).containsOnly(view.uuid(), subview.uuid(), pc.uuid());
 
     underTest.deleteNonRootComponentsInView(dbSession, singletonList(pc));
-    assertThat(getComponentUuidsOfMeasures())
+    assertThat(getComponentUuidsOfProjectMeasures())
       .containsOnly(view.uuid(), subview.uuid());
 
     underTest.deleteNonRootComponentsInView(dbSession, singletonList(subview));
-    assertThat(getComponentUuidsOfMeasures())
+    assertThat(getComponentUuidsOfProjectMeasures())
       .containsOnly(view.uuid());
   }
 
@@ -2007,30 +2008,30 @@ oldCreationDate));
 
   private void insertPropertyFor(ComponentDto... components) {
     Stream.of(components).forEach(componentDto -> db.properties().insertProperty(new PropertyDto()
-        .setKey(randomAlphabetic(3))
-        .setValue(randomAlphabetic(3))
+        .setKey(secure().nextAlphabetic(3))
+        .setValue(secure().nextAlphabetic(3))
         .setEntityUuid(componentDto.uuid()),
       componentDto.getKey(), componentDto.name(), componentDto.qualifier(), null));
   }
 
   private void insertPropertyFor(ProjectDto project) {
     db.properties().insertProperty(new PropertyDto()
-        .setKey(randomAlphabetic(3))
-        .setValue(randomAlphabetic(3))
+        .setKey(secure().nextAlphabetic(3))
+        .setValue(secure().nextAlphabetic(3))
         .setEntityUuid(project.getUuid()),
       null, project.getKey(), null, null);
   }
 
-  private Stream<String> getComponentUuidsOfMeasures() {
+  private Stream<String> getComponentUuidsOfProjectMeasures() {
     return db.select("select component_uuid as \"COMPONENT_UUID\" from project_measures").stream()
       .map(row -> (String) row.get("COMPONENT_UUID"));
   }
 
-  private void insertMeasureFor(ComponentDto... components) {
-    Arrays.stream(components).forEach(componentDto -> db.getDbClient().measureDao().insert(dbSession, new MeasureDto()
-      .setMetricUuid(randomAlphabetic(3))
+  private void insertProjectMeasureFor(ComponentDto... components) {
+    Arrays.stream(components).forEach(componentDto -> db.getDbClient().projectMeasureDao().insert(dbSession, new ProjectMeasureDto()
+      .setMetricUuid(secure().nextAlphabetic(3))
       .setComponentUuid(componentDto.uuid())
-      .setAnalysisUuid(randomAlphabetic(3))));
+      .setAnalysisUuid(secure().nextAlphabetic(3))));
     dbSession.commit();
   }
 
